--- a/Develop/index.html
+++ b/Develop/index.html
@@ -71,12 +71,15 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+</body>
+
+<!--Footer Section-->
+<footer>
+ <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
-</body>
-
+</footer>
 </html>
