--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,7 +26,7 @@
     </div>
     </header>
     
-    <div class="hero"></div>
+    <section class="hero"></section>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="laptop next to a cup of coffee and a book next to cub of writing utensils." />
@@ -60,7 +60,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt= " gear with arrow pointing down to a circle with a $ sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -68,7 +68,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt = "body with a lighbulb as a head"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -76,7 +76,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="gear behind 3 coins with a $ sign"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
