--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,32 +4,37 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <title> website </title>
 </head>
 
 <body>
     <header>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+        <div class="header">
+            <h1>Hori<span class="seo">seo</span>n</h1>
+            <div>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </header>
-    
+
+    <main>
+
     <section class="hero"></section>
+
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="laptop next to a cup of coffee and a book next to cub of writing utensils." />
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="laptop next to a cup of coffee and a book next to cub of writing utensils." />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -38,7 +43,8 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="person holding a phone while using their laptop on a desk" />
+            <img src="./assets/images/online-reputation-management.jpg"
+                alt="person holding a phone while using their laptop on a desk" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -47,7 +53,8 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="People sitting around a table with stickers on the table."  />
+            <img src="./assets/images/social-media-marketing.jpg"
+                alt="People sitting around a table with stickers on the table." />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -56,11 +63,12 @@
             </p>
         </div>
     </div>
-    
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt= " gear with arrow pointing down to a circle with a $ sign" />
+            <img src="./assets/images/lead-generation.png"
+                alt=" gear with arrow pointing down to a circle with a $ sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -68,7 +76,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt = "body with a lighbulb as a head"/>
+            <img src="./assets/images/brand-awareness.png" alt="body with a lighbulb as a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -84,6 +92,7 @@
         </div>
     </div>
 </body>
+</main>
 
 <!--Footer Section-->
 <footer>
