--- a/Develop/index.html
+++ b/Develop/index.html
@@ -64,8 +64,8 @@
         </div>
     </div>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside class="benefits">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png"
                 alt=" gear with arrow pointing down to a circle with a $ sign" />
@@ -74,7 +74,7 @@
                 to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="body with a lighbulb as a head" />
             <p>
@@ -82,14 +82,14 @@
                 for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="gear behind 3 coins with a $ sign"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
+        </aside>
     </div>
 </body>
 </main>
