Reorganized style.css page

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,7 @@
 
     <main>
 
-    <section class="hero"></section>
+    <article class="hero"></article>
 
     <div class="content">
         <div class="search-engine-optimization">
