fixed the linking from one section to the next

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,10 +29,10 @@
 
     <main>
 
-    <article class="hero"></article>
+    <section class="hero"></section>
 
     <div class="content">
-        <div class="search-engine-optimization">
+        <div class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg"
                 alt="laptop next to a cup of coffee and a book next to cub of writing utensils." />
             <h2>Search Engine Optimization</h2>
