--- a/Develop/index.html
+++ b/Develop/index.html
@@ -42,7 +42,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div  class="online-reputation-management" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg"
                 alt="person holding a phone while using their laptop on a desk" />
             <h2>Online Reputation Management</h2>
@@ -52,7 +52,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div  class="social-media-marketing" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg"
                 alt="People sitting around a table with stickers on the table." />
             <h2>Social Media Marketing</h2>
